Fix mobile CTA note line spacing by moving margin-bottom to sub-text

--- a/app/_components/sections/common/CtaButton.module.css
+++ b/app/_components/sections/common/CtaButton.module.css
@@ -40,8 +40,12 @@
   }
 
   .lineAddText {
-    margin-bottom: 32px;
+    margin-bottom: 0;
     text-align: center;
+  }
+
+  .lineSubText {
+    margin-bottom: 32px;
   }
 
   .ctaBtn {
